milestone 4: add structure enumeration, cluster space prediction, add monte carlo sampling
